--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hashim Khan - Senior Software Engineer (iOS) CV</title>
+    <title>Hashim Khan - iOS Developer CV</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -567,8 +567,8 @@
             <div class="relative mb-6">
                 <img src="self.jpeg" alt="Hashim Khan" class="profile-pic-sidebar" id="profilePicSidebar" style="cursor:pointer;">
             </div>
-            <h1 class="text-3xl font-bold mb-2 tracking-tight" style="color: var(--text-primary);">HASHIM KHAN</h1>
-            <p class="text-lg mb-6 font-medium" style="color: var(--text-secondary);">Senior Software Engineer (iOS)</p>
+            <h1 class="text-3xl font-bold mb-2 tracking-tight" style="color: var(--text-primary);">Hashim Khan</h1>
+            <p class="text-lg mb-6 font-medium" style="color: var(--text-secondary);">iOS App Developer</p>
             <div class="flex space-x-6 mb-8">
                 <a href="https://www.linkedin.com/in/hashim-khan-953180175/" target="_blank" class="social-icon" title="LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
@@ -602,10 +602,10 @@
         <section id="summary" class="mb-16 fade-in">
             <div class="flex flex-col items-center w-full">
                 <div class="w-full flex flex-col items-center">
-                    <p class="text-accent-blue font-semibold mb-3 text-lg text-center">Senior Software Engineer (iOS)</p>
-                    <h2 class="text-6xl font-bold mb-6 tracking-tight text-center" style="color: var(--text-primary);">HASHIM KHAN</h2>
+                    <p class="text-accent-blue font-semibold mb-3 text-lg text-center">iOS App Developer</p>
+                    <h2 class="text-6xl font-bold mb-6 tracking-tight text-center" style="color: var(--text-primary);">Hashim Khan</h2>
                     <p class="text-gray-300 leading-relaxed mb-8 text-lg text-center" style="max-width: 700px;">
-                        I am a passionate Senior iOS Developer with over 3 years of experience specializing in iOS application development. I excel in Swift, Clean Swift Architecture, and building enterprise-level iOS applications. My expertise includes banking applications, performance optimization, and App Store deployment. I also have backend development experience to support full-stack iOS solutions. I thrive in Agile environments and enjoy collaborating with cross-functional teams to deliver high-quality, scalable iOS applications.
+                        I am a passionate iOS Developer with over 3 years of experience specializing in iOS application development. I excel in Swift, Clean Swift Architecture, and building enterprise-level iOS applications. My expertise includes banking applications, performance optimization, and App Store deployment. I also have backend development experience to support full-stack iOS solutions. I thrive in Agile environments and enjoy collaborating with cross-functional teams to deliver high-quality, scalable iOS applications.
                     </p>
                     <div class="flex space-x-6 mb-8 justify-center">
                         <button class="contact-button" onclick="scrollToContact()">Contact</button>
